--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,9 @@
               </span>
             </div>
           </div>
+          <a href="./restaurants/new">Create</a>
         {{/each}}
+        
       </div>
     </div>
   </div>
