feat: add detail page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,6 +37,7 @@
             </div>
           </div>
           <a href="./restaurants/new">Create</a>
+          <a href="./restaurants/{{ this._id }}">detail</a>
         {{/each}}
         
       </div>
