--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -37,5 +37,6 @@
 
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}" style="max-width: 600px;">
     </div>
+    <a href="/">back</a>
   </div>
 </div>
