--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,6 +38,7 @@
           </div>
           <a href="./restaurants/new">Create</a>
           <a href="./restaurants/{{ this._id }}">detail</a>
+          <a href="./restaurants/{{ this._id }}/edit">edit</a>
         {{/each}}
         
       </div>
