--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -37,6 +37,8 @@
 
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}" style="max-width: 600px;">
     </div>
-    <a href="/">back</a>
+    <a href="/restaurants/{{ restaurant._id }}/edit"> edit &nbsp </a>
+
+    <a href="/"> back</a>
   </div>
 </div>
