--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -38,7 +38,9 @@
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}" style="max-width: 600px;">
     </div>
     <a href="/restaurants/{{ restaurant._id }}/edit"> edit &nbsp </a>
-
     <a href="/"> back</a>
+    <form action="/restaurants/{{ restaurant._id }}/delete" method="POST" style="display: inline;">
+        <button type="submit">delete</button>
+    </form>
   </div>
 </div>
