fear:add delete restaurant function

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -11,7 +11,7 @@
     </div>
     <div class="mb-3">
       <label for="category" class="form-label">分類<span class="text-danger">*</span></label>
-      <input type="text" class="form-control" id="category" placeholder="美式" list="categoryOptions" name="categoty" value="{{restaurant.category}}" required>
+      <input type="text" class="form-control" id="category" placeholder="美式" list="categoryOptions" name="category" value="{{restaurant.category}}" required>
       <datalist id="categoryOptions">
         <option>美式</option>
         <option>咖啡</option>
