feat: add method-override

--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -39,7 +39,7 @@
     </div>
     <a href="/restaurants/{{ restaurant._id }}/edit"> edit &nbsp </a>
     <a href="/"> back</a>
-    <form action="/restaurants/{{ restaurant._id }}/delete" method="POST" style="display: inline;">
+    <form action="/restaurants/{{ restaurant._id }}?_method=DELETE" method="POST" style="display: inline;">
         <button type="submit">delete</button>
     </form>
   </div>
