--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,7 +39,7 @@
           <a href="./restaurants/new">Create</a>
           <a href="./restaurants/{{ this._id }}">detail</a>
           <a href="./restaurants/{{ this._id }}/edit">edit</a>
-          <form action="./restaurants/{{ this._id }}/delete" method="POST" style="display: inline;">
+          <form action="./restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
             <button type="submit">delete</button>
           </form>
         {{/each}}
