--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,13 +35,23 @@
                 <i class="fas fa-star fa-xs"></i>
               </span>
             </div>
+            <div class="card-footer d-flex justify-content-end flex-wrap">
+              <a href="/restaurants/{{this._id}}/edit"><button
+              class="btn btn-link btn-sm"
+              >Edit</button>
+            </a>
+            <a href="/restaurants/{{this._id}}"><button
+                class="btn btn-link btn-sm"
+                >Details</button>
+            </a>
+            <form action="./restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
+            <button
+              type="submit"
+              class="btn btn-danger btn-sm text-white"
+            >Delete</button>
+          </form>    
+            </div>
           </div>
-          <a href="./restaurants/new">Create</a>
-          <a href="./restaurants/{{ this._id }}">detail</a>
-          <a href="./restaurants/{{ this._id }}/edit">edit</a>
-          <form action="./restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
-            <button type="submit">delete</button>
-          </form>
         {{/each}}
         
       </div>
