--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -45,15 +45,15 @@
       <textarea class="form-control" id="description" rows="3" name="description" required></textarea>
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">
+      <button type="submit" class="btn btn-primary btn-sm">
         新增餐廳
       </button>
       <a href="/">
-        <button type="button" classs="btn btn-outline-secondary">
+        <button type="button" class="btn btn-secondary btn-sm text-white ">
           返回首頁
         </button>
       </a>
-      <button type="reset" class="btn btn-outline-danger">重新輸入</button>
+      <button type="reset" class="btn btn-danger btn-sm text-white">重新輸入</button>
     </div>
   </form>
 </div>
