--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -37,10 +37,20 @@
 
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}" style="max-width: 600px;">
     </div>
-    <a href="/restaurants/{{ restaurant._id }}/edit"> edit &nbsp </a>
-    <a href="/"> back</a>
-    <form action="/restaurants/{{ restaurant._id }}?_method=DELETE" method="POST" style="display: inline;">
-        <button type="submit">delete</button>
+    <a href="/restaurants/{{restaurant._id}}/edit"><button
+      class="btn btn-link btn-sm"
+      >Edit</button>
+    </a>
+    <a href="/restaurants/{{restaurant._id}}"><button
+        class="btn btn-link btn-sm"
+        >Details</button>
+    </a>
+    <form action="./restaurants/{{ restaurant._id }}?_method=DELETE" method="POST" style="display: inline;">
+     <button
+      type="submit"
+      class="btn btn-danger btn-sm text-white"
+    >delete</button>
+  </form>    
     </form>
   </div>
 </div>
