--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,14 +2,24 @@
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
-      <form action="/search">
-        <h4 class="mb-2">尋找餐廳：</h4>
-        <div class="input-group">
+      <h4 class="mb-2 search-bar-title">尋找餐廳：</h4>
+      <form action="/search" class="d-flex">
+        <div class="input-group col-sm-3">
+          <select class=" form-control" name="sort" class="custom-select" onchange="this.form.submit()">
+            <option>設定餐廳排序</option>
+            <option value="asc">A to Z</option>
+            <option value="desc">Z to A</option>
+            <option value="category">類別</option>
+            <option value="location">地區</option>
+          </select>
+        </div>
+        <div class="input-group col-sm-9">
           <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..." value="{{keyword}}" aria-describedby="search-button">
           <div class="input-group-append">
             <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
         </div>
+        
       </form>
     </div>
   </div>
@@ -19,7 +29,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
-      <div class="card-columns">
+      <div class="card-columns d-flex-wrap">
         {{#each restaurants}}
           <div class="card mb-3">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
