--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,8 @@
             <option value="desc">Z to A</option>
             <option value="category">類別</option>
             <option value="location">地區</option>
+            <option value="rating">評分</option>
+
           </select>
         </div>
         <div class="input-group col-sm-9">
