--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,8 @@
+ <a href="/restaurants/new">
+    <button class="btn btn-primary">
+      新增餐廳
+    </button>
+  </a>
 <!-- search bar -->
 <div class="container search-bar">
   <div class="search-bar-outer">
