--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,14 +19,14 @@
     <div class="container">
       <a class="navbar-brand" href="/">
           <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png" width="30" height="30" class="d-inline-block align-top" alt="好。吃">
-          我的餐廳清單
+          {{#if isAuthenticated}}{{ user.name}}'s {{/if}}          
+          餐廳清單
       </a>
-      <div class="text-right">
-        <a href="/restaurants/new">
-        <button class="btn btn-primary">
-          新增餐廳
-        </button>
-        </a>
+      {{#if isAuthenticated}}
+        <a href="/users/logout" class="btn btn-outline-dark">Logout</a>
+      {{else}}
+        <a href="/users/login" class="btn btn-outline-dark">Login</a>
+      {{/if}}
       </div>
     </div>
   </nav>
